--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,8 +47,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 
     //retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
 
     //kotlin协程
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
@@ -65,6 +65,11 @@ dependencies {
     //navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    //livedata
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.2.0")
 
     testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'junit:junit:4.12'
 }
